objects/Misc_Issue_Line__c.object
<CustomObject>
    <description>Ability to issue parts from a location without a stockable target location and without a source document. This is to manage issuance of parts to departments that are not online
    The above parts are called Miscellaneous Issues.
    There can be one or more products issued in a miscellaneous issue.
    Some of the products may be serialized.
    Serial numbers must be unique.
    Ability to track the history of all miscellaneous issue transactions only at the quantity level. History tracking at serial number level is not required.
    Only some users should be allowed to post Miscellaneous Issues.</description>
    <fields>
        <fullName>Issue_Quantity__c</fullName>
        <description>Quantity Issued</description>
        <inlineHelpText>Quantity Issued</inlineHelpText>
        <label>Issue Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Misc_Misc_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the miscellaneous issue. Master-Detail relationship</description>
        <inlineHelpText>Reference to the miscellaneous issue</inlineHelpText>
        <label>Misc Issue</label>
        <referenceTo>Misc_Issue__c</referenceTo>
        <relationshipLabel>Misc Issue Lines</relationshipLabel>
        <relationshipName>Misc_Issue_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posted_to_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates that if this miscellaneous issue has been posted to inventory or not</description>
        <inlineHelpText>Flag indicates that if this miscellaneous issue has been posted to inventory or not</inlineHelpText>
        <label>Posted to Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product issued</description>
        <inlineHelpText>Name of the product issued</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Misc Issue Lines</relationshipLabel>
        <relationshipName>Misc_Issue_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Misc Issue Line</label>
    <nameField>
        <label>Misc Issue Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Misc Issue Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>